2007-01-18  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11271
        REGRESSION (r12358): Text in display: table unselectable

        Test: editing/selection/display-table-text.html

        * editing/htmlediting.cpp:
        (WebCore::isTableElement): Changed to return false for text nodes.

2007-01-18  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=11271
        REGRESSION (r12358): Text in display: table unselectable

        * editing/selection/display-table-text-expected.checksum: Added.
        * editing/selection/display-table-text-expected.png: Added.
        * editing/selection/display-table-text-expected.txt: Added.
        * editing/selection/display-table-text.html: Added.


Canonical link: https://commits.webkit.org/15946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18968 268f45cc-cd09-0410-ab3c-d52691b4dbfc